# csp-billing-adapter-google

./: .gitignore  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  csp-billing-adapter-google.spec  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-workflow.yml
csp_billing_adapter_google/: plugin  plugin.py
tests/unit/: test_plugin.py
