[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:csp_billing_adapter_google/__init__.py]

[bumpversion:file:csp-billing-adapter-google.spec]

[tool:pytest]
testpaths = tests

[coverage:report]
fail_under = 90
show_missing = True

[metadata]
license_file = LICENSE
